--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,21 @@
 language: php
-
 php:
-- '7.0'
-- '7.1'
-- '7.2'
+  - '7.1'
+  - '7.2'
 
-install: [
-  "mkdir -p app/etc var",
-  "echo \"{\\\"http-basic\\\":{\\\"repo.magento.com\\\":{\\\"username\\\":\\\"${MAGENTO_USERNAME}\\\",\\\"password\\\":\\\"${MAGENTO_PASSWORD}\\\"}}}\" > auth.json",
-  "composer install --prefer-dist"
-]
+before_install:
+  - mkdir -p app/etc var
+  - echo "{\"http-basic\":{\"repo.magento.com\":{\"username\":\"${MAGENTO_USERNAME}\",\"password\":\"${MAGENTO_PASSWORD}\"}}}" > auth.json
+  - if [ -n "$GITHUB_TOKEN" ]; then composer config github-oauth.github.com ${GITHUB_TOKEN}; fi;
+
+install:
+  - composer install --prefer-dist
 
 cache:
   directories:
+    - vendor
     - $HOME/.composer/cache
 
 script:
-    - vendor/bin/phpcs --config-set installed_paths vendor/magento/marketplace-eqp/
-    - vendor/bin/phpcs --standard=vendor/magento/marketplace-eqp/MEQP2 --ignore=vendor,pub --severity=9 ./
-    - vendor/bin/phpcs --standard=vendor/smile/magento2-smilelab-phpcs/phpcs-standards/SmileLab --ignore=vendor,pub --extensions=php ./
-    - vendor/bin/phpmd ./ text vendor/smile/magento2-smilelab-phpmd/phpmd-rulesets/rulset.xml --exclude vendor,pub
+  - ./vendor/bin/phpcs --config-set installed_paths vendor/magento/marketplace-eqp/,vendor/smile/magento2-smilelab-phpcs/phpcs-standards/
+  - ./vendor/bin/phpqa --ignoredDirs vendor,build --output cli --ansi  --tools phpcs:0,phpmd:0,phpcpd:0,parallel-lint:0,phpmetrics,phploc,pdepend
