--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,14 @@
         {
             "type": "composer",
             "url": "https://repo.magento.com/"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/delyriand/magento2-module-custom-entity.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/delyriand/magento2-module-scoped-eav.git"
         }
     ],
     "require": {
@@ -15,7 +23,9 @@
         "smile/elasticsuite": "^2.6.0"
     },
     "require-dev": {
-        "smile/magento2-smilelab-quality-suite": "^1.0.5"
+        "smile/magento2-smilelab-quality-suite": "^1.0.5",
+        "edgedesign/phpqa": "^1.18",
+        "jakub-onderka/php-parallel-lint": "^0.9.2"
     },
     "license": "OSL-3.0",
     "authors": [
