--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "~7.1.3||~7.2.0",
-        "smile/module-custom-entity": "dev-master",
+        "smile/module-custom-entity": "~1.0.0",
         "smile/elasticsuite": "^2.6.0"
     },
     "require-dev": {
