--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "php": "^7.4 || ^8.1",
         "smile/module-custom-entity": "~1.3.0",
         "smile/elasticsuite": "^2.8.0"
     },
