--- a/composer.json
+++ b/composer.json
@@ -3,21 +3,6 @@
     "type": "magento2-module",
     "description": "Smile - Custom Entity Product link Module",
     "keywords": ["magento2", "custom", "entity", "link", "product"],
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://repo.magento.com/"
-        }
-    ],
-    "require": {
-        "php": "^7.4 || ^8.1",
-        "smile/module-custom-entity": "^1.3",
-        "smile/elasticsuite": "^2.8.0"
-    },
-    "require-dev": {
-        "smile/magento2-smilelab-quality-suite": "^3.0"
-    },
-    "license": "OSL-3.0",
     "authors": [
         {
             "name": "Aurélien FOUCRET",
@@ -26,8 +11,29 @@
         {
             "name": "Maxime LECLERCQ",
             "email": "maxime.leclercq@smile.fr"
+        },
+        {
+            "name": "Cédric MAGREZ",
+            "email": "cedric.magrez@smile.fr"
         }
     ],
+    "license": "OSL-3.0",
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "magento/composer-dependency-version-audit-plugin": true,
+            "magento/magento-composer-installer": false
+        },
+        "sort-packages": true
+    },
+    "require": {
+        "php": "^7.4 || ^8.1",
+        "smile/module-custom-entity": "^1.3",
+        "smile/elasticsuite": "^2.8.0"
+    },
+    "require-dev": {
+        "smile/magento2-smilelab-quality-suite": "^3.0"
+    },
     "autoload": {
         "files": [
             "registration.php"
@@ -36,6 +42,12 @@
             "Smile\\CustomEntityProductLink\\" : ""
         }
     },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://repo.magento.com/"
+        }
+    ],
     "minimum-stability": "dev",
     "prefer-stable": true
 }
