Add attribut id as catalog_product_custom_entity_link key
This can be useful if you are multiple product attributes referencing the same custom entity type.

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "magento/composer-dependency-version-audit-plugin": true,
-            "magento/magento-composer-installer": false
+            "magento/magento-composer-installer": false,
+            "php-http/discovery": true
         },
         "sort-packages": true
     },
